# target/openapi-docs/openapi.json
@@ -16,30 +16,16 @@
   "application/json"
  ],
  "paths": {
-  "/monopoly/v1/hello": {
-   "get": {
-    "operationId": "MonopolyHello",
-    "parameters": [ ],
-    "responses": {
-     "200": {
-      "description": "A successful response",
-      "schema": {
-       "$ref": "#/definitions/Player"
-      }
-     }
-    }
-   }
-  },
-  "/monopoly/v1/player": {
+  "/monopoly/v1/employee": {
    "post": {
-    "operationId": "MonopolyPostPlayer",
+    "operationId": "MonopolyPostEmployee",
     "parameters": [
      {
       "in": "body",
       "name": "body",
       "required": false,
       "schema": {
-       "$ref": "#/definitions/Player"
+       "$ref": "#/definitions/Employee"
       }
      }
     ],
@@ -47,15 +33,15 @@
      "200": {
       "description": "A successful response",
       "schema": {
-       "$ref": "#/definitions/Player"
+       "$ref": "#/definitions/Employee"
       }
      }
     }
    }
   },
-  "/monopoly/v1/player/{id}": {
+  "/monopoly/v1/employee/{id}": {
    "get": {
-    "operationId": "MonopolyGetPlayer",
+    "operationId": "MonopolyGetEmployee",
     "parameters": [
      {
       "name": "id",
@@ -69,20 +55,20 @@
      "200": {
       "description": "A successful response",
       "schema": {
-       "$ref": "#/definitions/Player"
+       "$ref": "#/definitions/Employee"
       }
      }
     }
    },
    "put": {
-    "operationId": "MonopolyPutPlayer",
+    "operationId": "MonopolyPutEmployee",
     "parameters": [
      {
       "in": "body",
       "name": "body",
       "required": false,
       "schema": {
-       "$ref": "#/definitions/Player"
+       "$ref": "#/definitions/Employee"
       }
      },
      {
@@ -97,13 +83,13 @@
      "200": {
       "description": "A successful response",
       "schema": {
-       "$ref": "#/definitions/Player"
+       "$ref": "#/definitions/Employee"
       }
      }
     }
    },
    "delete": {
-    "operationId": "MonopolyDeletePlayer",
+    "operationId": "MonopolyDeleteEmployee",
     "parameters": [
      {
       "name": "id",
@@ -120,15 +106,237 @@
     }
    }
   },
-  "/monopoly/v1/players": {
+  "/monopoly/v1/employees": {
    "get": {
-    "operationId": "MonopolyGetPlayers",
+    "operationId": "MonopolyGetEmployees",
     "parameters": [ ],
     "responses": {
      "200": {
       "description": "A successful response",
       "schema": {
-       "$ref": "#/definitions/PlayerCollection"
+       "$ref": "#/definitions/EmployeeCollection"
+      }
+     }
+    }
+   }
+  },
+  "/monopoly/v1/hello": {
+   "get": {
+    "operationId": "MonopolyHello",
+    "parameters": [ ],
+    "responses": {
+     "200": {
+      "description": "A successful response",
+      "schema": {
+       "$ref": "#/definitions/Time"
+      }
+     }
+    }
+   }
+  },
+  "/monopoly/v1/project": {
+   "post": {
+    "operationId": "MonopolyPostProject",
+    "parameters": [
+     {
+      "in": "body",
+      "name": "body",
+      "required": false,
+      "schema": {
+       "$ref": "#/definitions/Project"
+      }
+     }
+    ],
+    "responses": {
+     "200": {
+      "description": "A successful response",
+      "schema": {
+       "$ref": "#/definitions/Project"
+      }
+     }
+    }
+   }
+  },
+  "/monopoly/v1/project/{id}": {
+   "get": {
+    "operationId": "MonopolyGetProject",
+    "parameters": [
+     {
+      "name": "id",
+      "in": "path",
+      "required": true,
+      "type": "integer",
+      "format": "int32"
+     }
+    ],
+    "responses": {
+     "200": {
+      "description": "A successful response",
+      "schema": {
+       "$ref": "#/definitions/Project"
+      }
+     }
+    }
+   },
+   "put": {
+    "operationId": "MonopolyPutProject",
+    "parameters": [
+     {
+      "in": "body",
+      "name": "body",
+      "required": false,
+      "schema": {
+       "$ref": "#/definitions/Project"
+      }
+     },
+     {
+      "name": "id",
+      "in": "path",
+      "required": true,
+      "type": "integer",
+      "format": "int32"
+     }
+    ],
+    "responses": {
+     "200": {
+      "description": "A successful response",
+      "schema": {
+       "$ref": "#/definitions/Project"
+      }
+     }
+    }
+   },
+   "delete": {
+    "operationId": "MonopolyDeleteProject",
+    "parameters": [
+     {
+      "name": "id",
+      "in": "path",
+      "required": true,
+      "type": "integer",
+      "format": "int32"
+     }
+    ],
+    "responses": {
+     "200": {
+      "description": "A successful response"
+     }
+    }
+   }
+  },
+  "/monopoly/v1/projects": {
+   "get": {
+    "operationId": "MonopolyGetProjects",
+    "parameters": [ ],
+    "responses": {
+     "200": {
+      "description": "A successful response",
+      "schema": {
+       "$ref": "#/definitions/ProjectCollection"
+      }
+     }
+    }
+   }
+  },
+  "/monopoly/v1/time": {
+   "post": {
+    "operationId": "MonopolyPostTime",
+    "parameters": [
+     {
+      "in": "body",
+      "name": "body",
+      "required": false,
+      "schema": {
+       "$ref": "#/definitions/Time"
+      }
+     }
+    ],
+    "responses": {
+     "200": {
+      "description": "A successful response",
+      "schema": {
+       "$ref": "#/definitions/Time"
+      }
+     }
+    }
+   }
+  },
+  "/monopoly/v1/time/{id}": {
+   "get": {
+    "operationId": "MonopolyGetTime",
+    "parameters": [
+     {
+      "name": "id",
+      "in": "path",
+      "required": true,
+      "type": "integer",
+      "format": "int32"
+     }
+    ],
+    "responses": {
+     "200": {
+      "description": "A successful response",
+      "schema": {
+       "$ref": "#/definitions/Time"
+      }
+     }
+    }
+   },
+   "put": {
+    "operationId": "MonopolyPutTime",
+    "parameters": [
+     {
+      "in": "body",
+      "name": "body",
+      "required": false,
+      "schema": {
+       "$ref": "#/definitions/Time"
+      }
+     },
+     {
+      "name": "id",
+      "in": "path",
+      "required": true,
+      "type": "integer",
+      "format": "int32"
+     }
+    ],
+    "responses": {
+     "200": {
+      "description": "A successful response",
+      "schema": {
+       "$ref": "#/definitions/Time"
+      }
+     }
+    }
+   },
+   "delete": {
+    "operationId": "MonopolyDeleteTime",
+    "parameters": [
+     {
+      "name": "id",
+      "in": "path",
+      "required": true,
+      "type": "integer",
+      "format": "int32"
+     }
+    ],
+    "responses": {
+     "200": {
+      "description": "A successful response"
+     }
+    }
+   }
+  },
+  "/monopoly/v1/times": {
+   "get": {
+    "operationId": "MonopolyGetTimes",
+    "parameters": [ ],
+    "responses": {
+     "200": {
+      "description": "A successful response",
+      "schema": {
+       "$ref": "#/definitions/TimeCollection"
       }
      }
     }
@@ -145,11 +353,33 @@
   }
  },
  "definitions": {
-  "Player": {
+  "Project": {
    "properties": {
-    "emailAddress": {
-     "type": "string"
+    "id": {
+     "type": "integer",
+     "format": "int32"
     },
+    "managerID": {
+     "type": "integer",
+     "format": "int32"
+    },
+    "name": {
+     "type": "string"
+    }
+   }
+  },
+  "TimeCollection": {
+   "properties": {
+    "items": {
+     "type": "array",
+     "items": {
+      "$ref": "#/definitions/Time"
+     }
+    }
+   }
+  },
+  "Employee": {
+   "properties": {
     "id": {
      "type": "integer",
      "format": "int32"
@@ -159,13 +389,89 @@
     }
    }
   },
-  "PlayerCollection": {
+  "EmployeeCollection": {
    "properties": {
     "items": {
      "type": "array",
      "items": {
-      "$ref": "#/definitions/Player"
+      "$ref": "#/definitions/Employee"
      }
+    }
+   }
+  },
+  "ProjectCollection": {
+   "properties": {
+    "items": {
+     "type": "array",
+     "items": {
+      "$ref": "#/definitions/Project"
+     }
+    }
+   }
+  },
+  "Time": {
+   "properties": {
+    "employeeID": {
+     "type": "integer",
+     "format": "int32"
+    },
+    "endTime": {
+     "$ref": "#/definitions/Timestamp"
+    },
+    "id": {
+     "type": "integer",
+     "format": "int32"
+    },
+    "projectID": {
+     "type": "integer",
+     "format": "int32"
+    },
+    "startTime": {
+     "$ref": "#/definitions/Timestamp"
+    }
+   }
+  },
+  "Timestamp": {
+   "properties": {
+    "date": {
+     "type": "integer",
+     "format": "int32"
+    },
+    "day": {
+     "type": "integer",
+     "format": "int32"
+    },
+    "hours": {
+     "type": "integer",
+     "format": "int32"
+    },
+    "minutes": {
+     "type": "integer",
+     "format": "int32"
+    },
+    "month": {
+     "type": "integer",
+     "format": "int32"
+    },
+    "nanos": {
+     "type": "integer",
+     "format": "int32"
+    },
+    "seconds": {
+     "type": "integer",
+     "format": "int32"
+    },
+    "time": {
+     "type": "integer",
+     "format": "int64"
+    },
+    "timezoneOffset": {
+     "type": "integer",
+     "format": "int32"
+    },
+    "year": {
+     "type": "integer",
+     "format": "int32"
     }
    }
   }
